Make the cursor update instantly without mouse move events

NSWindow's invalidateCursorRectsForView: resets cursor rects but do not
update the cursor instantly. The cursor is updated when the mouse moves.
Make the the cursor updated by setting the current cursor if not hidden.

Bug: 664502
Change-Id: I2ecceea588330ede44aff3fe93a953845bc395ff